libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/fn-generics-tuple-type.jsonc
//@ run: fail
//@ description: fn/4 tuple generics with type annotation should fail to compile
[
  "::kernel::special_form::fn",
  {
    "#tuple": ["T"],
    "#type": "Int"
    //~^ ERROR type annotation is not allowed on the generic parameter list
  },
  { "#struct": {} },
  "_",
  { "#literal": 0 }
]
